--- a/index.html
+++ b/index.html
@@ -176,14 +176,25 @@
         }
 
         /* Estilos para los enlaces de LinkedIn */
-        .member-info a {
+        .member-info a.linkedin-link { /* Clase específica para enlaces de LinkedIn */
             color: #0077B5; /* Color de LinkedIn */
             text-decoration: none; /* Quita el subrayado predeterminado */
             font-weight: bold; /* Hace el texto un poco más notorio */
         }
 
-        .member-info a:hover {
+        .member-info a.linkedin-link:hover {
             text-decoration: underline; /* Subraya al pasar el mouse */
+        }
+
+        /* Estilos para los enlaces telefónicos */
+        .member-info a.phone-link {
+            color: #28a745; /* Un color verde para enlaces telefónicos */
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .member-info a.phone-link:hover {
+            text-decoration: underline;
         }
 
         /* --- MEDIA QUERIES PARA ADAPTACIÓN A TELÉFONOS Y TABLETAS --- */
@@ -295,10 +306,10 @@
                     <p><strong>Fecha de Nacimiento:</strong> 12/04/1992</p>
                     <p><strong>Cédula:</strong> 20.129.712</p>
                     <p><strong>Correo Electrónico:</strong> ferjoseville@gmail.com</p>
-                    <p><strong>Número de Teléfono:</strong> 04123759137</p>
+                    <p><strong>Número de Teléfono:</strong> <a href="tel:+584123759137" class="phone-link">04123759137</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Desarrollo y Diseño</p>
-                    <p><strong>Red Social:</strong> <a href="URL_DE_LINKEDIN_FERNANDO" target="_blank" rel="noopener noreferrer">LinkedIn de Fernando</a></p>
+                    <p><strong>Red Social:</strong> <a href="URL_DE_LINKEDIN_FERNANDO" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Fernando</a></p>
                 </div>
             </div>
 
@@ -309,10 +320,10 @@
                     <p><strong>Fecha de Nacimiento:</strong> 01/02/1978</p>
                     <p><strong>Cédula:</strong> 13.308.756</p>
                     <p><strong>Correo Electrónico:</strong> razavarce@gmail.com</p>
-                    <p><strong>Número de Teléfono:</strong> 04142857181</p>
+                    <p><strong>Número de Teléfono:</strong> <a href="tel:+584142857181" class="phone-link">04142857181</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Desarrollo y Diseño</p>
-                    <p><strong>Red Social:</strong> <a href="https://www.linkedin.com/in/raul-zavarce-090863128" target="_blank" rel="noopener noreferrer">LinkedIn de Raul</a></p>
+                    <p><strong>Red Social:</strong> <a href="https://www.linkedin.com/in/raul-zavarce-090863128" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Raul</a></p>
                 </div>
             </div>
             
@@ -323,10 +334,10 @@
                     <p><strong>Fecha de Nacimiento:</strong> 26/11/1982</p>
                     <p><strong>Cédula:</strong> 16.357.005</p>
                     <p><strong>Correo Electrónico:</strong> roberalexis@gmail.com</p>
-                    <p><strong>Número de Teléfono:</strong> 04142857181</p>
+                    <p><strong>Número de Teléfono:</strong> <a href="tel:+584142857181" class="phone-link">04142857181</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Base de Datos y Documentación</p>
-                    <p><strong>Red Social:</strong> <a href="URL_DE_LINKEDIN_ROBER" target="_blank" rel="noopener noreferrer">LinkedIn de Rober</a></p>
+                    <p><strong>Red Social:</strong> <a href="URL_DE_LINKEDIN_ROBER" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Rober</a></p>
                 </div>
             </div>
             
@@ -337,10 +348,10 @@
                     <p><strong>Fecha de Nacimiento:</strong> 16/10/1988</p>
                     <p><strong>Cédula:</strong> 18.271.471</p>
                     <p><strong>Correo Electrónico:</strong> annieaular18@gmail.com</p>
-                    <p><strong>Número de Teléfono:</strong> 04242064646</p>
+                    <p><strong>Número de Teléfono:</strong> <a href="tel:+584242064646" class="phone-link">04242064646</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Base de Datos y Documentación</p>
-                    <p><strong>Red Social:</strong> <a href="https://www.linkedin.com/in/annie-aular-sandoval-670489179" target="_blank" rel="noopener noreferrer">LinkedIn de Annie</a></p>
+                    <p><strong>Red Social:</strong> <a href="https://www.linkedin.com/in/annie-aular-sandoval-670489179" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Annie</a></p>
                 </div>
             </div>
         </div>
