--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@
             text-decoration: underline;
         }
 
+        /* Estilos para los enlaces de correo electrónico */
+        .member-info a.email-link {
+            color: #dc3545; /* Un color rojo para enlaces de correo */
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .member-info a.email-link:hover {
+            text-decoration: underline;
+        }
+
         /* --- MEDIA QUERIES PARA ADAPTACIÓN A TELÉFONOS Y TABLETAS --- */
         @media (max-width: 992px) {
             .main-layout-container {
@@ -305,7 +316,7 @@
                     <h2>Fernando Villegas</h2>
                     <p><strong>Fecha de Nacimiento:</strong> 12/04/1992</p>
                     <p><strong>Cédula:</strong> 20.129.712</p>
-                    <p><strong>Correo Electrónico:</strong> ferjoseville@gmail.com</p>
+                    <p><strong>Correo Electrónico:</strong> <a href="mailto:ferjoseville@gmail.com" class="email-link">ferjoseville@gmail.com</a></p>
                     <p><strong>Número de Teléfono:</strong> <a href="tel:+584123759137" class="phone-link">04123759137</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Desarrollo y Diseño</p>
@@ -319,7 +330,7 @@
                     <h2>Raul Zavarce</h2>
                     <p><strong>Fecha de Nacimiento:</strong> 01/02/1978</p>
                     <p><strong>Cédula:</strong> 13.308.756</p>
-                    <p><strong>Correo Electrónico:</strong> razavarce@gmail.com</p>
+                    <p><strong>Correo Electrónico:</strong> <a href="mailto:razavarce@gmail.com" class="email-link">razavarce@gmail.com</a></p>
                     <p><strong>Número de Teléfono:</strong> <a href="tel:+584142857181" class="phone-link">04142857181</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Desarrollo y Diseño</p>
@@ -333,7 +344,7 @@
                     <h2>Rober Lugo</h2>
                     <p><strong>Fecha de Nacimiento:</strong> 26/11/1982</p>
                     <p><strong>Cédula:</strong> 16.357.005</p>
-                    <p><strong>Correo Electrónico:</strong> roberalexis@gmail.com</p>
+                    <p><strong>Correo Electrónico:</strong> <a href="mailto:roberalexis@gmail.com" class="email-link">roberalexis@gmail.com</a></p>
                     <p><strong>Número de Teléfono:</strong> <a href="tel:+584142857181" class="phone-link">04142857181</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Base de Datos y Documentación</p>
@@ -347,7 +358,7 @@
                     <h2>Annie Aular</h2>
                     <p><strong>Fecha de Nacimiento:</strong> 16/10/1988</p>
                     <p><strong>Cédula:</strong> 18.271.471</p>
-                    <p><strong>Correo Electrónico:</strong> annieaular18@gmail.com</p>
+                    <p><strong>Correo Electrónico:</strong> <a href="mailto:annieaular18@gmail.com" class="email-link">annieaular18@gmail.com</a></p>
                     <p><strong>Número de Teléfono:</strong> <a href="tel:+584242064646" class="phone-link">04242064646</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Base de Datos y Documentación</p>
