--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <p><strong>Número de Teléfono:</strong> <a href="tel:+584123759137" class="phone-link">04123759137</a></p>
                     <p><strong>Profesión:</strong> Técnico Superior en Informática</p>
                     <p><strong>Rol en Dulceyolet:</strong> Desarrollo y Diseño</p>
-                    <p><strong>Red Social:</strong> <a href="URL_DE_LINKEDIN_FERNANDO" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Fernando</a></p>
+                    <p><strong>Red Social:</strong> <a href="https://www.linkedin.com/in/fernando-villegas-77363a347/" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Fernando</a></p>
                 </div>
             </div>
 
