--- a/index.html
+++ b/index.html
@@ -423,6 +423,23 @@
                     <p><strong>Red Social:</strong> <a href="https://www.linkedin.com/in/annie-aular-sandoval-670489179" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn de Annie</a></p>
                 </div>
             </div>
+
+            <!-- Nuevo miembro añadido aquí -->
+            <div class="member-card">
+                <img src="https://placehold.co/120x120/cccccc/333333?text=Nuevo+Miembro" alt="Foto de Nuevo Miembro">
+                <div class="member-info">
+                    <h2>Nombre del Nuevo Miembro</h2>
+                    <p><strong>Fecha de Nacimiento:</strong> DD/MM/AAAA</p>
+                    <p><strong>Cédula:</strong> XX.XXX.XXX</p>
+                    <p><strong>Correo Electrónico:</strong> <a href="mailto:nuevo.miembro@example.com" class="email-link">nuevo.miembro@example.com</a></p>
+                    <p><strong>Número de Teléfono:</strong> <a href="tel:+XXXXXXXXXXXX" class="phone-link">XXXXXXXXXXXX</a></p>
+                    <p><strong>Profesión:</strong> Tu Profesión</p>
+                    <p><strong>Rol en Dulceyolet:</strong> Tu Rol</p>
+                    <p><strong>Red Social:</strong> <a href="URL_DE_LINKEDIN_NUEVO_MIEMBRO" target="_blank" rel="noopener noreferrer" class="linkedin-link">LinkedIn del Nuevo Miembro</a></p>
+                </div>
+            </div>
+            <!-- Fin del nuevo miembro -->
+
         </div>
     </div>
 
@@ -446,3 +463,4 @@
     </script>
 </body>
 </html>
+
